@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3050 2004/06/09 12:23:20 jonnymind Exp $
+ * $Id: ChangeLog,v 1.3051 2004/06/09 12:49:55 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-06-09 16:23 UTC-0300 Giancarlo Niccolai <antispam /at/ niccolai "dot" ws>
+  * source/rtl/gtxvt/gtxvt.c
+  * source/rtl/gtxvt/gtxvt.h
+    ! When changing the fg window with ALT-TAB, the ALT status of gtxvt was
+      left on. When returning to the application window, many keys were
+      unuseable until the user pressed ALT.
+      Fixed.
 
 2004-06-09 16:45 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
   * source/debug/tbrwtext.prg
